# mmkv-jvm

./: .gitignore  .gitmodules  build.gradle.kts  settings.gradle.kts
cpp/: CMakeLists.txt  icu_twtool_mmkv_MMKV.cpp
gradle/wrapper/: gradle-wrapper.properties
src/main/java/icu/twtool/mmkv/: MMKV.java
src/test/java/icu/twtool/mmkv/: MMKVTest.java
